--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-slideshow": "^0.0.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
