--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mdb-react-ui-kit": "^7.0.0",
     "package-name": "^0.1.0",
     "react": "^18.2.0",
