--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-slideshow": "^0.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "slick-carousel": "^1.8.1",
