--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "concurrently \"node index.js\""
-  },
+"scripts": {
+  "start": "concurrently \"node login.js\" \"node product.js\""
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
