--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-slideshow": "^0.0.1",
     "react-toastify": "^9.1.3",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "slick-carousel": "^1.8.1",
